<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white_30"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/rvUserImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_launcher_background"
            app:shapeAppearanceOverlay="@style/circle" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingHorizontal="10dp">

            <TextView
                android:id="@+id/rvUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/poppins_bold"
                android:maxLines="1"
                android:text="@string/natalia_vicky"
                android:textSize="18sp" />

            <com.willy.ratingbar.ScaleRatingBar
                android:id="@+id/starCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srb_clickable="false"
                app:srb_drawableEmpty="@drawable/ic_star_unselected"
                app:srb_drawableFilled="@drawable/ic_star_selected"
                app:srb_numStars="5"
                app:srb_scrollable="false"
                app:srb_starHeight="15dp"
                app:srb_starPadding="3dp"
                app:srb_starWidth="15dp"
                app:srb_stepSize="1" />


        </LinearLayout>

        <TextView
            android:id="@+id/daysAgo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_regular"
            android:maxLines="1"
            android:text="@string/_2_days_ago"
            android:textColor="@color/text_500"
            android:textSize="16sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:paddingVertical="10dp"
            android:text="@string/description"
            android:textColor="@color/text_500"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>