<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.barber.account.BarberProfileFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/profil"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/iv_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/iv_image"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/image_barber"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/circle" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/circle_shape_green"
                    android:gravity="center"
                    android:padding="3dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:srcCompat="@drawable/ic_plus"
                        app:tint="@color/white" />

                </androidx.appcompat.widget.LinearLayoutCompat>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fullname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                tools:text="@string/name" />

            <TextView
                android:id="@+id/phoneNumberTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/phone_number"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/edit_fl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_edit" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_vertical"
                android:text="@string/edit_profile"
                app:drawableEndCompat="@drawable/ic_road"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginHorizontal="10dp"
            android:background="@color/text_100" />


        <LinearLayout
            android:id="@+id/edit_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_vertical"
                android:text="@string/title_gallery"
                app:drawableEndCompat="@drawable/ic_road"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginHorizontal="10dp"
            android:background="@color/text_100" />

        <LinearLayout
            android:id="@+id/setting_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_settings" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_vertical"
                android:text="@string/settings"
                app:drawableEndCompat="@drawable/ic_road"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginHorizontal="10dp"
            android:background="@color/text_100" />

        <LinearLayout
            android:id="@+id/FAQs_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_faqs" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_vertical"
                android:text="@string/faqs"
                app:drawableEndCompat="@drawable/ic_road"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginHorizontal="10dp"
            android:background="@color/text_100" />

        <LinearLayout
            android:id="@+id/aboutUs_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_aboutus" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_vertical"
                android:text="@string/about_us"
                app:drawableEndCompat="@drawable/ic_road"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:gravity="bottom">

            <LinearLayout
                android:id="@+id/logout_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables,UselessParent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_logout" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center_vertical"
                    android:text="@string/logout"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</LinearLayout>